--- a/Facebook/css/fbBootstrap.css
+++ b/Facebook/css/fbBootstrap.css
@@ -31,20 +31,49 @@ body {
 	height: 34px;
   margin-top: 17px;
 }
+@media (max-width:991px) {
+#username ,#password{
+  height: 75px;
+  font-size: 30px;
+}
 
+button.btn-Login{
+	background-color: #4267b2;
+	color: #fff;
+	border-color: #29487d;
+  width: 100%;
+  height: 75px;
+  margin-top: 30px;
+  font-weight: bold;
+  font-size: 25px;
+ }
+
+.sm-txt-low{
+  margin-top: 70px;
+ }
+ #btn-signup{
+   font-size: 25px;
+   width: 50%;
+   height: 75px;
+   font-weight: bold;
+
+ }
+.div-signup{
+  text-align: center;
+  margin-top: 350px;
+ }
+}
+/*sm-end*/
 /* Medium devices (desktops, 992px and up) */
 @media (min-width:992px) {
   #username , #password{
   height: 23px;
   border-radius: 0px;
   border-color: #1d2a5b;
-}
-@media (min-width: 575px) and (max-width: 991px){
-  .sm-textboxes{
-    margin-top: 10px;
-  }
+  display: inline-block;
+ }
 
-}
+
 .divLogIn label{
 	color:#fff;
 	font-weight: normal;
@@ -60,13 +89,23 @@ body {
 	width: 49%;
 	margin-top: 10px;
 }
-.btn-Login{
+button.btn-Login{
 	background-color: #4267b2;
+  padding: 0 0 0 0;
 	color: #fff;
 	border-color: #29487d;
 	margin-top: 25px;
+  height: 24px;
+  width: 48px;
 	font-weight: bold;
+  font-size: 12px;
+ }
+ #btn-signup{
+   font-size: 20px;
+   font-weight: bold;
+ }
 }
+/*media query for desktop devices ends*/
 .divConnectingPpl{
 	color: #0e385f;
 	float: left;
